--- a/src/components/RegisterForm/index.css
+++ b/src/components/RegisterForm/index.css
@@ -61,12 +61,19 @@
     margin-bottom: 10px;
     font-family: 'Arial', sans-serif;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 16px;
+    color: black;
+  }
+  .note-msg-text{
+    margin-bottom: 10px;
+    font-family: 'Arial', sans-serif;
+    
+    font-size: 14px;
+    
     color: #64748b;
   }
-  
-  .username-input-field {
+  .input-field {
     font-size: 14px;
     height: 40px;
     border: 1px solid #d7dfe9;
@@ -90,7 +97,7 @@
     outline: none;
   }
   
-  .login-button {
+  .register-button {
     font-family: 'Arial', sans-serif;
     font-weight: 500;
     font-size: 18px;
@@ -113,7 +120,7 @@
   .error-message {
     align-self: start;
     margin-top: 16px;
-    font-size: 16px;
+    font-size: 15px;
   
     margin-bottom: 13px;
     font-family: 'Arial', sans-serif;
