--- a/src/components/MyContacts/MyContacts.css
+++ b/src/components/MyContacts/MyContacts.css
@@ -3,5 +3,27 @@
     flex-direction: row;
 }
 .my-contacts-page-content-container{
-    padding:25px 20px 35px 20px;
+    padding:10px 20px 35px 20px;
+}
+.my-contacts-header-buttons{
+    display: flex;
+}
+.my-contacts-header-buttons button{
+    border: none;
+    margin: 5px;
+    background-color: white;
+    border: 1px solid rgb(150, 149, 149);
+    font-size: 14px;
+    border-radius: 5px;
+    padding: 2px 7px;
+}
+.my-contacts-header-buttons button:hover{
+    background-color: #D4AF37;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.my-contacts-title{
+    display: flex;
+    justify-content: space-between;
 }
