--- a/src/components/SentChatRequestItem/index.css
+++ b/src/components/SentChatRequestItem/index.css
@@ -1,37 +1,106 @@
-.request-card {
+.card {
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 20px;
+    width: 500px;
+    padding: 0;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
 }
-.request-card button{
+.card button{
     margin: 15px;
     width: 100px;
     height: 30px;
 }
-.request-card:hover {
+.card:hover {
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.request-card h3 {
+.card h6 {
     margin: 0 0 5px 0;
     color: #555;
 }
 
-.request-card p {
+.card p {
     margin: 0;
     color: #777;
 }
 .send-message-btn{
-    background-color: #0BDA51;
+    background-color: #D4AF37;
     display: block;
-    width: 120px !important;
+    width: 90px !important;
     color: #fff;
     height: 38px !important;
     border: none;
     font-size: 15px;
     border-radius: 8px;
+}
+.card-header.one{
+    background-color: #F2D26C ;
+    padding: 15px;
+    height: 80px;
+}
+.card-header.two{
+    display: flex;
+    padding: 15px;
+    padding-top: 30px;
+    height: 80px;
+    justify-content: space-between;
+}
+.rupee-icon{
+    padding: 5px;
+    width: 25px;
+    height: 25px;
+    background-color: #F2D26C;
+    border-radius: 50%;
+}
+.card-body{
+    display: flex;
+    margin: 5px;
+}
+.card-body img{
+    width: 180px;
+    height: 180px;
+}
+.chat-msg-icon{
+    font-size: 24px;
+}
+.property-box{
+    border: 0.5px ridge gray;
+    width: 270px;
+    height: 130px;
+    margin-left: 12px;
+    padding: 3px;
+}
+.property-sub-box1{
+    display: flex;
+}
+.compass, .building, .bathroom{
+    margin-top: 20px;
+}
+.parking{
+    margin: 20px 0px 0px 15px;
+}
+.icon-paragraph{
+    display: flex;
+    padding: 3px;
+}
+.compass-paragraph, .building-paragraph, .bathroom-paragraph, .parking-paragraph{
+    margin: 7px;
+}
+
+.compass-paragraph h6 p, .building-paragraph h6 p, .bathroom-paragraph h6 p {
+    width: 100px;
+}
+.property-sub-box2{
+    display: flex;
+}
+.heart{
+    border: 1px solid gray;
+    width: 50px;
+    height: 37px;
+    border-radius: 4px;
+    padding: 5px;
+    margin: 15px 0px 0px 15px;
 }
