--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -13,7 +13,7 @@
   font-size: 28px;
   font-family: sans-serif;
   text-decoration: none;
-  color: #FF5E0E;
+  color:#d0b200;
 }
 
 @media screen and (max-width: 768px) {
@@ -156,7 +156,7 @@
   font-size: 14px;
   padding: 8px 16px;
   color: #ffffff;
-  background-color: #FF5E0E;
+  background-color: #d0b200;
   border: none;
   border-radius: 4px;
   margin-left: 14px;
