--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -168,6 +168,7 @@ input[type="radio"]:checked + label {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   padding: 10px;
   gap: 15px;
+  list-style-type: none;
 }
 
 .property-card {
