--- a/src/components/RegisterForm/index.css
+++ b/src/components/RegisterForm/index.css
@@ -106,7 +106,7 @@
     width: 150px;
     margin-top: 20px;
     margin-bottom: 2px;
-    background-color: #FF5E0E;
+    background-color: #B8860B;
     border: none;
     outline: none;
     cursor: pointer;
@@ -129,7 +129,7 @@
   }
   .highlight-text{
     
-   color: #ff0b37;
+   color: #ad3531;
    text-decoration: none;
    font-weight: 600;
   }
