--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -30,10 +30,12 @@
   display: flex;
   justify-content: space-evenly;
   padding: 8px;
-  max-height: 40px;
+  max-height: 20px;
   background-color: #f0f0f0;
   border-bottom: 1px solid #ddd;
   font-size: 14px;
+  display: flex;
+  align-items: center;
 }
 
 .chat-body {
@@ -51,7 +53,6 @@
   padding: 5px;
   border-radius: 10px;
   word-wrap: break-word;
-  font-size: 14px;
 }
 
 .chat-message.sender {
@@ -59,8 +60,9 @@
   background-color: #D4AF37;
   color: #000;
   max-width: 250px;
-  padding: 10px 10px 0px 3px;
-  /* max-height: auto; */
+  padding: 0px 8px 0px 8px;
+  max-height: auto;
+  font-size: 15px;
 }
 
 .chat-message.receiver {
@@ -68,8 +70,9 @@
   background-color: #F2D26C;
   color: #000;
   max-width: 250px;
-  padding: 10px 10px 0px 3px;
-  /* max-height: auto; */
+  padding: 0px 8px 0px 8px;
+  max-height: auto;
+  font-size: 15px;
 }
 
 .chat-footer {
@@ -128,17 +131,13 @@
 }
 
 .chat-close-icon {
-  margin-right: 15px;
+  margin-right: 10px;
   padding: 5px;
-  width: 25px;
-  height: 25px;
+  width: 15px;
+  height: 15px;
   background-color: #90856e;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 50%;
-  font-size: 50px;
 }
 
 .chat-building-icon {
