--- a/src/components/SentChatRequestItem/index.css
+++ b/src/components/SentChatRequestItem/index.css
@@ -17,7 +17,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.card h6 {
+.card h5 {
     margin: 0 0 5px 0;
     color: #555;
 }
@@ -25,6 +25,7 @@
 .card p {
     margin: 0;
     color: #777;
+    font-size: 14px;
 }
 .send-message-btn{
     background-color: #D4AF37;
@@ -36,22 +37,26 @@
     font-size: 15px;
     border-radius: 8px;
 }
-.card-header.one{
+.card-header-one{
     background-color: #F2D26C ;
     padding: 15px;
-    height: 80px;
+    height: auto;
 }
-.card-header.two{
+.card-header-one h4{
+    margin: 0 0 5px 0;
+    color: #555;
+}
+.card-header-two{
     display: flex;
     padding: 15px;
     padding-top: 30px;
-    height: 80px;
+    height: auto;
     justify-content: space-between;
 }
 .rupee-icon{
     padding: 5px;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     background-color: #F2D26C;
     border-radius: 50%;
 }
@@ -76,12 +81,12 @@
 .property-sub-box1{
     display: flex;
 }
-.compass, .building, .bathroom{
+.compass, .building, .bathroom,.parking{
     margin-top: 20px;
 }
-.parking{
+/* .parking{
     margin: 20px 0px 0px 15px;
-}
+} */
 .icon-paragraph{
     display: flex;
     padding: 3px;
@@ -90,7 +95,7 @@
     margin: 7px;
 }
 
-.compass-paragraph h6 p, .building-paragraph h6 p, .bathroom-paragraph h6 p {
+.compass-paragraph h6 p, .building-paragraph h6 p, .bathroom-paragraph h6 p , .parking-paragraph h6 p{
     width: 100px;
 }
 .property-sub-box2{
@@ -99,7 +104,7 @@
 .heart{
     border: 1px solid gray;
     width: 50px;
-    height: 37px;
+    height: 25px;
     border-radius: 4px;
     padding: 5px;
     margin: 15px 0px 0px 15px;
