--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,7 +13,7 @@
     font-size: 28px;
     font-family: sans-serif;
     text-decoration: none;
-    color: #FF5E0E;
+    color: #d0b200;
   }
   
   @media screen and (max-width: 768px) {
@@ -142,19 +142,7 @@
     cursor: pointer;
   }
   
-  .logout-desktop-btn {
-    font-family: Arial, sans-serif;
-    font-weight: 600;
-    font-size: 14px;
-    padding: 8px 16px;
-    color: #ffffff;
-    background-color: #FF5E0E;
-    border: none;
-    border-radius: 4px;
-    margin-left: 14px;
-    cursor: pointer;
-    outline: none;
-  }
+
   
   @media screen and (max-width: 767px) {
     .logout-desktop-btn {
