--- a/src/components/PropertiesPage/PropertiesPage.css
+++ b/src/components/PropertiesPage/PropertiesPage.css
@@ -3,6 +3,10 @@
     display: flex;
 }
 
+.propertiespage-description{
+    color: black;
+}
+
 /* Filter Sidebar */
 .propertiespage-filter-sidebar {
     width: 250px;
@@ -88,6 +92,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    color: black;
 }
 
 /* Rows */
@@ -95,6 +100,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
+    color: black;
 }
 
 .propertiespage-row p {
@@ -127,6 +133,4 @@
     background-color: var(--gold-dark);
 }
 
-.propertiespage-action-buttons button:hover {
-    opacity: 0.9;
-}
+
